--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,14 @@ orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
-
   workflows:
    # Name the workflow "welcome"
-  welcome:
+    welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
-      - build
-      - test
+      build: 
+         docker:       
+          - image: circleci/<language>:<version TAG>      
+         steps:       
+           - run: echo "hello world"          
  
